unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Office Address</fullName>
                </value>
                <value>
                    <fullName>Residential Address</fullName>
                </value>
                <value>
                    <fullName>Permanent Address</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_Norm_Eligibility_Remarks__c</fullName>
        <label>Age Norm Eligibility Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Age_Norm_Eligibility__c</fullName>
        <formula>IF( Current_Age__c &gt;=18 &amp;&amp;  Current_Age__c  &lt;=65 ,&quot;Eligible&quot; ,&quot;Non-Eligible&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age Norm Eligibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Agent)</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_Father_Name__c</fullName>
        <label>Applicant Father Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Spouse_Name__c</fullName>
        <label>Applicant Spouse Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <label>Applicant Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Co-Applicant</fullName>
                </value>
                <value>
                    <fullName>Guarantor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Form_Type__c</fullName>
        <label>Application Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Physical Application Form</fullName>
                </value>
                <value>
                    <fullName>E-Application Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_Destination__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Area_Mailing__c</fullName>
        <label>Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorised_Person__c</fullName>
        <label>Authorised Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Belongs_to_negative_property_address__c</fullName>
        <inlineHelpText>Customer Belongs to Negative Property Address( Valid only for SME or Rural type of loans)</inlineHelpText>
        <label>Belongs to negative property address</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Branch_Manager__c</fullName>
        <formula>Branch__r.Branch_Manager__r.FirstName + &apos;&apos;+
Branch__r.Branch_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Branch Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts (Branch)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Building_Street_Name_Destination__c</fullName>
        <label>Building / Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Building_Street_Name_Mailing__c</fullName>
        <label>Building / Street Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Type_Remark__c</fullName>
        <label>Business Type Remark</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HUF</fullName>
                </value>
                <value>
                    <fullName>Non-HUF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Vintage_Policy_Rules__c</fullName>
        <formula>IF( ISPICKVAL(Product__c,&quot;Lead - VYAPAR (SECURED LOAN)&quot;)|| ISPICKVAL(Product__c,&quot;Lead - UDYAM (UNSECURED LOAN)&quot;),&apos;Min 3 years&apos;,IF(ISPICKVAL(Product__c,&quot;Lead - Rural Vyapar&quot;)||ISPICKVAL(Product__c,&quot;Lead - Rural Udyam&quot;),&apos;Min 2 years&apos;,IF(ISPICKVAL(Product__c,&quot;Lead - UCV&quot;)&amp;&amp;ISPICKVAL( Purpose__c ,&quot;Transporter - Retail&quot;),&apos;FTU:- Not Less than 2 years.FTB:- Not Less than 2 years.Retail 2-5:- Not Less than 3 years.Retail 6-9:- Not Less than 3 years&apos;,IF(ISPICKVAL(Product__c,&quot;Lead - UCV&quot;)&amp;&amp;ISPICKVAL( Purpose__c ,&quot;Transporter - Strategic&quot;),&apos;Strategic:- Not less than 4 years.Super Strategic:- Not less than 5 Years.&apos;,IF(ISPICKVAL(Product__c,&quot;Lead - UCV&quot;)&amp;&amp;ISPICKVAL( Purpose__c ,&quot;Freight Booking Company&quot;),&apos;Freight Booking Co-1.FBC1:-Not less than 3 Years. 4.2.FBC2:-Not Less than 5 Years.&apos;,IF(ISPICKVAL(Product__c,&quot;Lead - UCV&quot;)&amp;&amp;ISPICKVAL( Purpose__c ,&quot;Captive&quot;),&apos;Captive 1 Super Strategic:-Not less than 5 years.Captive 2 Super Strategic:-Not less than 3 years.Captive 3 Retail:- Not less than 23 years.&apos;,IF(ISPICKVAL(Product__c,&quot;Lead - UCV&quot;)&amp;&amp;ISPICKVAL( Purpose__c ,&quot;Education Institutions&quot;),&apos;School 1:-Not Less than 5 Years.School 2:-Not Less than 3 Years.School 3:-Not Less than 2 Years.&apos;,IF(ISPICKVAL(Product__c,&quot;Lead - UCV&quot;)&amp;&amp;ISPICKVAL( Purpose__c ,&quot;Bus Operator&quot;),&apos;FTB:- not less than 2 years.Retail 2-5:- Not Less than 3 years. Strategic 6-9: Not Less than 4 years.Super Strategic:- Not Less than 5 years.&apos;,&apos;&apos;))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Vintage Policy Rules</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Vintage__c</fullName>
        <label>Business Vintage as per policy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Vintage_as_per_policy_Remarks__c</fullName>
        <label>Business Vintage as per policy Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CIBIL_ID_Number__c</fullName>
        <label>CIBIL ID Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIBIL_ID__c</fullName>
        <label>CIBIL ID</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Driving License Number (Permanent only)</fullName>
                </value>
                <value>
                    <fullName>Passport Number</fullName>
                </value>
                <value>
                    <fullName>Voter ID Number</fullName>
                </value>
                <value>
                    <fullName>Pan No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CIBIL_Score_Eligibility_Remarks__c</fullName>
        <label>CIBIL Score Eligibility Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CIBIL_Score_Eligibility__c</fullName>
        <formula>IF( CIBIL_Score__c  &gt;=650 &amp;&amp;  ISPICKVAL(Product__c, &quot;Lead - VYAPAR (SECURED LOAN)&quot;) ||( CIBIL_Score__c  &gt;=700 &amp;&amp;  ISPICKVAL(Product__c, &quot;Lead - UDYAM (UNSECURED LOAN)&quot;))||( CIBIL_Score__c  &gt;=650 &amp;&amp;  ISPICKVAL(Product__c, &quot;Lead - UCV&quot;)) ,&apos;Eligible&apos;,&apos;Non-Eligible&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CIBIL Score Eligibility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIBIL_Score__c</fullName>
        <label>CIBIL Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CIN_Number__c</fullName>
        <inlineHelpText>Only for Private Ltd/Public Ltd/LLP</inlineHelpText>
        <label>CIN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Type__c</fullName>
        <label>Channel Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DSA Manager</fullName>
                </value>
                <value>
                    <fullName>DST Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City_Destination__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Mailing__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Applicant 10</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Co-Applicant 10)</relationshipLabel>
        <relationshipName>ContactsEOFr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_11__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Applicant 11</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Co-Applicant 11)</relationshipLabel>
        <relationshipName>ContactsEOGu</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_12__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Applicant 12</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Co-Applicant 12)</relationshipLabel>
        <relationshipName>ContactsEOIW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MSME</fullName>
                </value>
                <value>
                    <fullName>Non MSME</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Constitution__c</fullName>
        <label>Constitution</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proprietership</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Private Limited</fullName>
                </value>
                <value>
                    <fullName>LLP</fullName>
                </value>
                <value>
                    <fullName>Public Limited</fullName>
                </value>
                <value>
                    <fullName>Society</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
                <value>
                    <fullName>SEP</fullName>
                </value>
                <value>
                    <fullName>SENP</fullName>
                </value>
                <value>
                    <fullName>Salaried</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cross_Sell__c</fullName>
        <label>Cross Sell</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Current_Age__c</fullName>
        <formula>IF( NOT( ISBLANK(  Birthdate ) ) ,
  IF( DATE( 2000 , MONTH( Birthdate ) , DAY( Birthdate ) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( Birthdate ),
     YEAR (Today()) - YEAR ( Birthdate ) -1 ),
  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Existing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Incorporation__c</fullName>
        <label>Date of Incorporation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>District_Destination__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Mailing__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To be uploaded in case of physical form only</inlineHelpText>
        <label>Document Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Post Graduate</fullName>
                </value>
                <value>
                    <fullName>Under Graduate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee_Code__c</fullName>
        <label>Employee Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flat_House_Number_Destination__c</fullName>
        <label>Flat / House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Flat_House_Number_Mailing__c</fullName>
        <label>Flat / House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_60_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Form 60 Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Transgender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guarantor_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guarantor 1</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Guarantor 1)</relationshipLabel>
        <relationshipName>ContactsEOQ6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guarantor_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guarantor 2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Guarantor 2)</relationshipLabel>
        <relationshipName>ContactsEOSR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Guarantor_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Guarantor 3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Guarantor 3)</relationshipLabel>
        <relationshipName>ContactsEQWj</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KYC_Details__c</fullName>
        <label>KYC Details</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PAN Card</fullName>
                </value>
                <value>
                    <fullName>Form 60</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Land_Mark_Destination__c</fullName>
        <label>Land Mark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Land_Mark_Mailing__c</fullName>
        <label>Land Mark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Amount__c</fullName>
        <label>Loan Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Widowed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nature_of_Loan__c</fullName>
        <label>Nature of Loan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Refinance</fullName>
                </value>
                <value>
                    <fullName>Repurchase</fullName>
                </value>
                <value>
                    <fullName>Internal BT</fullName>
                </value>
                <value>
                    <fullName>External BT plus Top-up</fullName>
                </value>
                <value>
                    <fullName>Fresh Loan</fullName>
                </value>
                <value>
                    <fullName>Purchase of Commercial Property</fullName>
                </value>
                <value>
                    <fullName>Top-Up Loan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Negative_property_address_Remarks__c</fullName>
        <label>Negative property address Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_of_Years_in_Business__c</fullName>
        <label>No of Years in Business</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OK_to_Proceed__c</fullName>
        <label>OK to Proceed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes - With Deviation</fullName>
                </value>
                <value>
                    <fullName>Yes - Without Deviation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Occupancy_Status__c</fullName>
        <label>Occupancy Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owned</fullName>
                </value>
                <value>
                    <fullName>Rental</fullName>
                </value>
                <value>
                    <fullName>Parental</fullName>
                </value>
                <value>
                    <fullName>Co-Provided</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organisation_Name__c</fullName>
        <label>Organisation Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_Number__c</fullName>
        <label>PAN Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pincode_Destination__c</fullName>
        <label>Pincode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pincode_Mailing__c</fullName>
        <label>Pincode</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lead - VYAPAR (SECURED LOAN)</fullName>
                </value>
                <value>
                    <fullName>Lead - UDYAM (UNSECURED LOAN)</fullName>
                </value>
                <value>
                    <fullName>Lead - UCV</fullName>
                </value>
                <value>
                    <fullName>Lead - Rural Vyapar</fullName>
                </value>
                <value>
                    <fullName>Lead - Rural Udyam</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Promo_Scheme__c</fullName>
        <label>Promo Scheme</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Purpose__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cat A - FTU</fullName>
                </value>
                <value>
                    <fullName>Cat A1 - FTB</fullName>
                </value>
                <value>
                    <fullName>Cat B - Retail 2-5</fullName>
                </value>
                <value>
                    <fullName>Cat C - Retail 6-9</fullName>
                </value>
                <value>
                    <fullName>Strategic</fullName>
                </value>
                <value>
                    <fullName>Super Strategic</fullName>
                </value>
                <value>
                    <fullName>FBC-1</fullName>
                </value>
                <value>
                    <fullName>FBC-2</fullName>
                </value>
                <value>
                    <fullName>Captive 3 - Retail</fullName>
                </value>
                <value>
                    <fullName>Captive 2 - Strategic</fullName>
                </value>
                <value>
                    <fullName>Captive 1 - Super Strategic</fullName>
                </value>
                <value>
                    <fullName>School-1</fullName>
                </value>
                <value>
                    <fullName>School-2</fullName>
                </value>
                <value>
                    <fullName>School-3</fullName>
                </value>
                <value>
                    <fullName>Bus 1 - FTB</fullName>
                </value>
                <value>
                    <fullName>Bus 2 - Retail 2 - 5</fullName>
                </value>
                <value>
                    <fullName>Bus 3 - Retail 6 - 9</fullName>
                </value>
                <value>
                    <fullName>Bus 4 - Strategic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Scheme__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Transporter - Retail</fullName>
                </value>
                <value>
                    <fullName>Transporter - Strategic</fullName>
                </value>
                <value>
                    <fullName>Freight Booking Company</fullName>
                </value>
                <value>
                    <fullName>Captive</fullName>
                </value>
                <value>
                    <fullName>Education Institutions</fullName>
                </value>
                <value>
                    <fullName>Bus Operator</fullName>
                </value>
                <value>
                    <fullName>Business Expansion</fullName>
                </value>
                <value>
                    <fullName>Working capital</fullName>
                </value>
                <value>
                    <fullName>Capital equipment purchase (CAPEX)</fullName>
                </value>
                <value>
                    <fullName>Refinance of existing loans</fullName>
                </value>
                <value>
                    <fullName>Purchase of commercial property</fullName>
                </value>
                <value>
                    <fullName>To meet temporary mismatch in cash flow</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RTR_Norm_Eligibility__c</fullName>
        <label>RTR Norms Eligibility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RTR_Norms_Remarks__c</fullName>
        <label>RTR Norms Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RTR_Norms__c</fullName>
        <formula>IF( ISPICKVAL(Product__c,&quot;Lead - VYAPAR (SECURED LOAN)&quot;)|| ISPICKVAL(Product__c,&quot;Lead - UDYAM (UNSECURED LOAN)&quot;)|| ISPICKVAL(Product__c,&quot;Lead - Rural Vyapar&quot;)||ISPICKVAL(Product__c,&quot;Lead - Rural Udyam&quot;),&apos;No Bounce in the last 6 months due to insufficient funds Not more than 1 bounce in the last 12 months subject to and DPD should not be more than 30 days&apos;,&apos;Excellent:1 peak of 30 days in last 12 months RTR Average Delay:&lt;= 12 days Good: 1 peak of 60 days in last 18 months RTR Average Delay: &lt; = 15 days Poor: 1 peak delay of more than 60 days Average Delay:&gt; 15 days&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RTR Norms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Of_Interest__c</fullName>
        <label>Rate Of Interest</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Referral_Source_Name__c</fullName>
        <label>Referral Source Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_with_Applicant__c</fullName>
        <label>Relationship with Applicant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role_name__c</fullName>
        <formula>Owner.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Role name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SM_SO__c</fullName>
        <formula>IF((CONTAINS( Role_name__c,&apos;Sales Officer&apos;)),&apos;SO&apos;,IF((CONTAINS( Role_name__c,&apos;Sales Manager&apos;)),&apos;SM&apos;,&apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SM/SO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_As_Destination_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same As Destination Address</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>